gatsby-theme/src/styles/card.scss
@import "./variables.scss";

.card {

    display: flex;
    align-items: flex-start;
    color: $white;
    margin-right: 0;
    height: 100%;
    position: relative;
    text-decoration: none;

    &:hover, &:focus {
        .card__image::after {
            opacity: 0;            
        }
    }

    @media(min-width: 992px){
        margin-right: 30px;
    }
    
    &__image {
        background: $purple;
        min-height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        overflow: hidden;

        @media(min-width: 768px){
            min-height: 200px;
            left: 20px;
        }

        img {
            // width: 128px;
            // height: 192px;
        }

        &::before, &::after {
            content: "";
            display: block;
            position: absolute;
            left: 0;
            top: 0;
            width: 100%;
            height: 100%;
            background-color: $purple
        }

        &::after {
            opacity: 0.5;
            transition: opacity .3s ease;
        }
    }
    
    &__content {
        background: $blue;
        width: 100%;
        padding: 15px 16px 25px;
        padding-left: 146px;
        height: calc(100%);
        margin-top: 0;

        display: grid;
        grid-template-columns: 1fr;
        justify-items: start;

        @media(min-width: 768px){
            padding: 15px 20px 25px;
            padding-left: 168px;
            height: calc(100% - 50px);
            margin-top: 44px;
        }

        h3 {
            margin-top: 0;
            margin-bottom: 0;
            display: -webkit-box;
            -webkit-line-clamp: 3;
            -webkit-box-orient: vertical;
            overflow: hidden;
        }

        p {
            font-weight: 100;
            font-size: 14px;
            margin-top: 10px;
            
            @media(min-width: 768px){
                font-size: 16px;
            }
        }

        &-category {
            font-size: 16px;
            cursor: pointer;
            display: flex;
            align-items: center;
            line-height: 1;
            background-color: $white;
            color: $blue;
            padding: 7px 15px;
            font-family: 'Lato';
            font-size: 14px;
            font-weight: 400;
            border-radius: 15px;

            @media(min-width: 768px){
                font-size: 16px;
            }

            span {
                display: inline-block;
            }
        }

        &-ratings {
            margin-top: 15px;
            align-self: end;

            p {
                font-size: 14px;
            }

            .ratings {
                svg {
                    height: 13px;
                    width: 14px;
                    margin-right: 5px;
                    stroke: $white;

                    @media(min-width: 768px){
                        height: 16px;
                        width: 17px;
                    }

                    path {
                        fill: none;
                    }
                }
                
            }
        }
    }

    &.card--with-rounded-corners {
        .card__image {
            border-top-right-radius: 0;
            border-top-left-radius: 20px;
            border-bottom-left-radius: 20px;

            @media(min-width: 768px){
                border-top-right-radius: 75px;
                border-top-left-radius: 75px;
                border-bottom-left-radius: 0
            }
        }
        
        .card__content {
            border-radius: 20px;
        }

        &.card--no-displacement {
            .card__image {
                border-top-right-radius: 0;
                border-top-left-radius: 20px;
                border-bottom-left-radius: 20px;
            }
    
            .card__content {
                border-radius: 20px;
            }
        }
    }

    /** Styling without image displacement **/
    &.card--no-displacement {
        .card__image {
            min-height: 100%;
            position: absolute;
            top: 0;
            left: 0;
        }

        .card__content {
            padding: 15px 16px 25px;
            padding-left: 146px;
            height: calc(100%);
            margin-top: 0;
        }
    }


    /** Grid carousel **/
    &.card--complex {
        
        @media(min-width: 768px){
            & {
                margin-right: 8px;
            }
        }

        @media(min-width: 992px){
            & {
                margin-bottom: 8px;
                height: 98%;

                .card__content {
                    grid-template-columns: 2fr 1.5fr;
                    grid-template-rows: max-content;
                    gap: 10px;

                    h3 {
                        grid-column: 1 / span 1;
                    }

                    p {
                        grid-column: 1 / span 1;
                        grid-row: 2 / span 1;
                    }

                    &-category {
                        grid-column: 2 / span 1;
                        grid-row: 1 / span 1;
                        align-self: start;
                        justify-self: end;
                    }

                    &-ratings {
                        grid-column: 2 / span 1;
                        grid-row: 2 / span 1;
                        align-self: end;
                        justify-self: end;
                        // margin-top: 0;
                    }
                }
            }
        }

        @media(min-width: 1400px){
            & .card__content {
                padding-right: 20px;
            }
        }

        @media(min-width: 1600px){
            & .card__content {
                padding-top: 38px;
            }
        }
    }

}

